--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "homepage": "https://phantom3200.github.io/skatai-ai/",
   "dependencies": {
+    "@sentry/cli": "^2.38.2",
+    "@sentry/react": "^8.38.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,11 +30,12 @@
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run sentry:sourcemaps",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org skataiai --project skatai-ai ./build && sentry-cli sourcemaps upload --org skataiai --project skatai-ai ./build"
   },
   "eslintConfig": {
     "extends": [
