integrate telegram lib

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/telegram-web-app": "^7.10.1",
     "gh-pages": "^6.2.0",
     "nanoid": "^5.0.8",
     "react": "^18.3.1",
@@ -29,7 +30,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build && npm run sentry:sourcemaps",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
